# libHAWOpenCL

./: .gitignore  CMakeLists.txt  README.md
doc/: CMakeLists.txt  libHAWOpenCL.doxygen
include/: HAWOpenCL.h  HAWOpenCL_config.h.in
share/: FindLibHAWOpenCL.cmake
src/: CMakeLists.txt  opencl_get_devices.c  opencl_init.c  opencl_kernel_build.c  opencl_kernel_info.c  opencl_kernel_load.c  opencl_kernel_print_info.c  opencl_print_info.c  opencl_printf_error.c  opencl_profile_events.c
test/: CMakeLists.txt  opencl_print_info.c  opencl_vector_add.c
